--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>HKBSubs</title>
     <style>
         body {
-            background-image: url('https://ibb.co/Y3hfn6d');
+            background-image: url('https://cdn.discordapp.com/attachments/889410374171000873/1252503117199573002/Screenshot_20240520-161600_1.png?ex=667273ed&is=6671226d&hm=d93e1ddf04abf0466f16c47a0d669e36f640607ace19bf228ad46921cddc7784&');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
